styles.css
/* CSS RESETS */
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  line-height: 1.5;
}

button {
  background: none;
  border: none;
  font: inherit;
  color: inherit;
}

/* Images should never be wider or taller than their containers by default */
img,
picture {
  max-width: 100%;
  max-height: 100%;
}

/* Inherit fonts for inputs and buttons */
input, button,
textarea, select {
  font-family: inherit;
  font-size: inherit;
}

/* Make sure textareas without a rows attribute are not tiny */
textarea:not([rows]) {
  min-height: 10em;
}

/* MAIN CSS */
html {
  font-size: 12px; /* root font size */
}

body {
  background-color: rgb(233, 233, 233);
  font-family: 'Times New Roman', Times, serif;
  font-size: 1.5rem;
  padding: 0 20px;
  margin: 0 auto;
  width: 800px;
  max-width: 100vw;
}

button:hover {
  cursor: pointer;
}

a {
  color: inherit;
}

.heading {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 2em 0 0.5em;
}

h1 {
  font-style: italic;
  /* text-align: center; */
  font-size: 3rem;
  line-height: 1.1;
  /* position: relative; */
  display: inline-block;
}

/* #softmax-link {
  color: inherit;
  text-decoration: inherit;
  position: relative;
}

#softmax-link:hover {
  text-decoration: underline;
}

#softmax-link:hover::after {
  content: "Wikipedia";
  font-family: 'Times New Roman', Times, serif;
  font-size: 0.3em;
  font-style: normal;
  color: #0006;
  position: absolute;
  top: -0.2em;
  right: 0em;
} */

#softmax-word {
  position: relative;
}

#softmax-links-container {
  /* display: flex; */
  gap: 0.5em;
  position: absolute;
  top: 0;
  left: 0;
  transform: translateY(-100%);
  opacity: 0;
  transition: opacity 0.2s;

  text-align: left;
  font-style: italic;
  font-weight: normal;
  font-size: 0.25em;
  color: #0006;
  line-height: 1.2;
}

#softmax-links-container > p {
  font-size: 1.2em;
}

.softmax-link {
  font-style: normal;
}

#softmax-word:hover #softmax-links-container {
  opacity: 1;
}

.softmax-link:hover {
  cursor: pointer;
}

#wikipedia:hover {
  color: #000a;
}
#threeb1b:hover {
  color: #007bff;
}

.softmax-link > a:visited {
  color: inherit;
  text-decoration: none;
}

#github-repo-link {
  /* position: absolute;
  top: 50%;
  right: 0px;
  transform: translateY(-50%) scale(30%); */
  transform-origin: right top; 
  transform: scale(25%);
  fill: #0004;
  transition: fill 0.2s;
}
#github-repo-link:hover  {
  fill: #000;
}

main {  
  /* border: 1px solid; */
  /* margin: 0 auto; */
  /* width: 800px; */
}

.row {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  gap: 1em;

  height: 1.5em;
  /* margin-bottom: 20px; */
  padding: 1em 0;
}

.row:hover {
  background-color: #0001;
}

.row.selected {
  background-color: rgba(205, 180, 55, 0.427);
}

.input-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  /* gap: 1em; */
  /* width: 30%; */
  /* flex-grow: 1; */
}

.num-input {
  max-width: 2em;
  margin: 0 0.5em;
}

.spinner {
  display: flex;
  flex-direction: row;
  align-items: center;
  font-size: 1.1em;
  gap: 1px;
}
.spinner > button {
  width: 1.2em;
  height: 95%;
  background-color: #fff8;
}
.spinner > button:hover {
  background-color: #fff4;
}
.spinner > button:active {
  background-color: #fff3;
}

.output-container {
  /* flex-grow: 1; */
  /* border: 1px solid; */
  height: inherit;
  width: 60%;
  display: flex;
  align-items: center;
  justify-content: space-between;

  overflow-x: scroll;
  overflow-y: hidden;
  /* gap: 5%; */
}

.percentage {
  width: 4em;
  flex-shrink: 0;
  /* margin-right: 1em; */
}

.output {
  position: absolute;
  top: 0;
  left: 0;
  height: inherit;
  background-color: #845151;
  z-index: 2;
}

.output-full-rect {
  position: relative;  
  width: 60%;
  min-width: 50px;
  height: inherit;
  background-color: #f8f8f8;
}
.output {
  width: 100%;
  transform-origin: left;
}

.remove-input-btn {
  font-size: 1.5em;
  color: #0008;
  padding: 0 0.2em;
}

.remove-input-btn:hover {
  color: #000;
}

#add-input-btn {
  /* width: 800px;
  margin: 0 auto; */
  display: block;
  text-align: left;
  color: #0008;
  padding: 0.5em 0;
}

#add-input-btn:hover {
  text-decoration: underline;
}

.the-void {
  font-size:1rem;
  color:#0006;
  opacity: 0;
  transition: opacity 1s;
}

.the-void.stares-back {
  opacity: 1;
}

#softmax-equation {
  /* width: 800px;
  margin: 0 auto; */
  overflow-x: scroll;
  margin-top: 20px;
}

#rendering-katex-info {
  font-size: 0.8em;
  font-style: italic;
  color: #000A;
}

